// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component should render with a given initial-value 1`] = `
Array [
  <div
    class="backdrop visible fixed"
    role="button"
  />,
  <div
    class="container isDown"
  >
    <div
      class="overlay small"
    >
      <section
        class="content"
      >
        <header>
          <h2>
            sulu_location.select_location
          </h2>
          <span
            aria-label="su-times"
            class="su-times clickable icon"
            role="button"
            tabindex="0"
          />
        </header>
        <article>
          <div
            class="container"
          >
            <div
              class="grid grid"
            >
              <div
                class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <div
                    class="singleAutoComplete"
                  >
                    <label
                      class="input default left"
                    >
                      <div
                        class="prependedContainer default"
                      >
                        <span
                          aria-label="su-search"
                          class="su-search icon default"
                        />
                      </div>
                      <input
                        autocomplete="off"
                        class="mousetrap"
                        type="text"
                        value=""
                      />
                    </label>
                  </div>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <div
                    class="map leaflet-container leaflet-grab leaflet-touch-drag"
                    style="position: relative;"
                    tabindex="0"
                  >
                    <div
                      class="leaflet-pane leaflet-map-pane"
                      style="left: 0px; top: 0px;"
                    >
                      <div
                        class="leaflet-pane leaflet-tile-pane"
                      >
                        <div
                          class="leaflet-layer "
                          style="z-index: 1;"
                        >
                          <div
                            class="leaflet-tile-container leaflet-zoom-animated"
                            style="left: 0px; top: 0px;"
                          >
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://b.tile.openstreetmap.org/5/18/13.png"
                              style="width: 256px; height: 256px; left: -239px; top: -255px;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="leaflet-pane leaflet-shadow-pane"
                      >
                        <img
                          alt=""
                          class="leaflet-marker-shadow leaflet-zoom-hide"
                          src="marker-shadow.png"
                          style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 0px; top: 0px;"
                        />
                      </div>
                      <div
                        class="leaflet-pane leaflet-overlay-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-marker-pane"
                      >
                        <img
                          alt=""
                          class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive leaflet-marker-draggable"
                          src="marker-icon.png"
                          style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 0px; top: 0px; z-index: 0;"
                          tabindex="0"
                        />
                      </div>
                      <div
                        class="leaflet-pane leaflet-tooltip-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-popup-pane"
                      />
                    </div>
                    <div
                      class="leaflet-control-container"
                    >
                      <div
                        class="leaflet-top leaflet-left"
                      >
                        <div
                          class="leaflet-control-zoom leaflet-bar leaflet-control"
                        >
                          <a
                            aria-label="Zoom in"
                            class="leaflet-control-zoom-in"
                            href="#"
                            role="button"
                            title="Zoom in"
                          >
                            +
                          </a>
                          <a
                            aria-label="Zoom out"
                            class="leaflet-control-zoom-out"
                            href="#"
                            role="button"
                            title="Zoom out"
                          >
                            −
                          </a>
                        </div>
                      </div>
                      <div
                        class="leaflet-top leaflet-right"
                      />
                      <div
                        class="leaflet-bottom leaflet-left"
                      />
                      <div
                        class="leaflet-bottom leaflet-right"
                      />
                    </div>
                  </div>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <label
                    class="label"
                  >
                    sulu_location.latitude *
                  </label>
                  <label
                    class="input default left"
                  >
                    <input
                      step="0.001"
                      type="number"
                      value="22"
                    />
                  </label>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <label
                    class="label"
                  >
                    sulu_location.longitude *
                  </label>
                  <label
                    class="input default left"
                  >
                    <input
                      step="0.001"
                      type="number"
                      value="33"
                    />
                  </label>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <label
                    class="label"
                  >
                    sulu_location.zoom *
                  </label>
                  <label
                    class="input default left"
                  >
                    <input
                      max="18"
                      min="0"
                      type="number"
                      value="5"
                    />
                  </label>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
              >
                <div
                  class="item colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="divider"
                  >
                    sulu_location.additional_information
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.title
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value="title-123"
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.street
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value="street-123"
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.number
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.code
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value="code-123"
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.town
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value="town-123"
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.country
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </article>
        <footer>
          <div
            class="actions"
          >
            <button
              class="button link"
              type="button"
            >
              <span
                class="text"
              >
                sulu_admin.reset
              </span>
            </button>
          </div>
          <button
            class="button primary"
            type="button"
          >
            <span
              class="text"
            >
              sulu_admin.confirm
            </span>
          </button>
        </footer>
      </section>
    </div>
  </div>,
]
`;

exports[`Component should render without a given initial-value 1`] = `
Array [
  <div
    class="backdrop visible fixed"
    role="button"
  />,
  <div
    class="container isDown"
  >
    <div
      class="overlay small"
    >
      <section
        class="content"
      >
        <header>
          <h2>
            sulu_location.select_location
          </h2>
          <span
            aria-label="su-times"
            class="su-times clickable icon"
            role="button"
            tabindex="0"
          />
        </header>
        <article>
          <div
            class="container"
          >
            <div
              class="grid grid"
            >
              <div
                class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <div
                    class="singleAutoComplete"
                  >
                    <label
                      class="input default left"
                    >
                      <div
                        class="prependedContainer default"
                      >
                        <span
                          aria-label="su-search"
                          class="su-search icon default"
                        />
                      </div>
                      <input
                        autocomplete="off"
                        class="mousetrap"
                        type="text"
                        value=""
                      />
                    </label>
                  </div>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <div
                    class="map leaflet-container leaflet-grab leaflet-touch-drag"
                    style="position: relative;"
                    tabindex="0"
                  >
                    <div
                      class="leaflet-pane leaflet-map-pane"
                      style="left: 0px; top: 0px;"
                    >
                      <div
                        class="leaflet-pane leaflet-tile-pane"
                      >
                        <div
                          class="leaflet-layer "
                          style="z-index: 1;"
                        >
                          <div
                            class="leaflet-tile-container leaflet-zoom-animated"
                            style="left: 0px; top: 0px;"
                          >
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://a.tile.openstreetmap.org/1/0/0.png"
                              style="width: 256px; height: 256px; left: -256px; top: -256px;"
                            />
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://b.tile.openstreetmap.org/1/1/0.png"
                              style="width: 256px; height: 256px; left: 0px; top: -256px;"
                            />
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://b.tile.openstreetmap.org/1/0/1.png"
                              style="width: 256px; height: 256px; left: -256px; top: 0px;"
                            />
                            <img
                              alt=""
                              class="leaflet-tile"
                              role="presentation"
                              src="https://c.tile.openstreetmap.org/1/1/1.png"
                              style="width: 256px; height: 256px; left: 0px; top: 0px;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="leaflet-pane leaflet-shadow-pane"
                      >
                        <img
                          alt=""
                          class="leaflet-marker-shadow leaflet-zoom-hide"
                          src="marker-shadow.png"
                          style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 0px; top: 0px;"
                        />
                      </div>
                      <div
                        class="leaflet-pane leaflet-overlay-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-marker-pane"
                      >
                        <img
                          alt=""
                          class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive leaflet-marker-draggable"
                          src="marker-icon.png"
                          style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 0px; top: 0px; z-index: 0;"
                          tabindex="0"
                        />
                      </div>
                      <div
                        class="leaflet-pane leaflet-tooltip-pane"
                      />
                      <div
                        class="leaflet-pane leaflet-popup-pane"
                      />
                    </div>
                    <div
                      class="leaflet-control-container"
                    >
                      <div
                        class="leaflet-top leaflet-left"
                      >
                        <div
                          class="leaflet-control-zoom leaflet-bar leaflet-control"
                        >
                          <a
                            aria-label="Zoom in"
                            class="leaflet-control-zoom-in"
                            href="#"
                            role="button"
                            title="Zoom in"
                          >
                            +
                          </a>
                          <a
                            aria-label="Zoom out"
                            class="leaflet-control-zoom-out"
                            href="#"
                            role="button"
                            title="Zoom out"
                          >
                            −
                          </a>
                        </div>
                      </div>
                      <div
                        class="leaflet-top leaflet-right"
                      />
                      <div
                        class="leaflet-bottom leaflet-left"
                      />
                      <div
                        class="leaflet-bottom leaflet-right"
                      />
                    </div>
                  </div>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <label
                    class="label"
                  >
                    sulu_location.latitude *
                  </label>
                  <label
                    class="input default left"
                  >
                    <input
                      step="0.001"
                      type="number"
                      value=""
                    />
                  </label>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <label
                    class="label"
                  >
                    sulu_location.longitude *
                  </label>
                  <label
                    class="input default left"
                  >
                    <input
                      step="0.001"
                      type="number"
                      value=""
                    />
                  </label>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="item gridItem colSpan colSpan-4 space-before-0 space-after-0"
              >
                <div
                  class="field"
                >
                  <label
                    class="label"
                  >
                    sulu_location.zoom *
                  </label>
                  <label
                    class="input default left"
                  >
                    <input
                      max="18"
                      min="0"
                      type="number"
                      value="1"
                    />
                  </label>
                  <label
                    class="errorLabel"
                  />
                </div>
              </div>
              <div
                class="section gridSection colSpan colSpan-12 space-before-0 space-after-0"
              >
                <div
                  class="item colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="divider"
                  >
                    sulu_location.additional_information
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.title
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.street
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.number
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.code
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-6 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.town
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <label
                      class="label"
                    >
                      sulu_location.country
                    </label>
                    <label
                      class="input default left"
                    >
                      <input
                        type="text"
                        value=""
                      />
                    </label>
                    <label
                      class="errorLabel"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </article>
        <footer>
          <div
            class="actions"
          >
            <button
              class="button link"
              type="button"
            >
              <span
                class="text"
              >
                sulu_admin.reset
              </span>
            </button>
          </div>
          <button
            class="button primary"
            type="button"
          >
            <span
              class="text"
            >
              sulu_admin.confirm
            </span>
          </button>
        </footer>
      </section>
    </div>
  </div>,
]
`;
